# vulkan-rust-engine

./: Cargo.toml
varre-app/: Cargo.toml
varre-app/src/: lib.rs
varre-app/src/mesh_simple/: mesh_simple.rs
varre-app/src/triangle/: triangle.rs
varre-assets/: Cargo.toml  build.rs  models_template.rs  shaders_template.rs
varre-assets/shaders/: example.slang
varre-assets/src/: lib.rs
varre-engine/: Cargo.toml
varre-engine/src/: command_buffers.rs  extensions.rs  lib.rs  memory_utils.rs  mesh_utils.rs  physical_device_utils.rs  render_context.rs  shader_utils.rs  vulkan_swapchain.rs  vulkan_window.rs
varre-engine/src/geometry/: vertex.rs
varre-engine/src/render_context/: mesh_simple.rs  triangle.rs
vordt-app/: Cargo.toml
vordt-app/src/: lib.rs
vordt-engine/: Cargo.toml
vordt-engine/src/: command_buffers.rs  lib.rs  physical_device_utils.rs  swapchain.rs  vulkan_swapchain.rs
