[package]
name = "varre-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "varre_app"
path = "src/lib.rs"

[[bin]]
name = "triangle"
path = "src/triangle/triangle.rs"

[[bin]]
name = "mesh_simple"
path = "src/mesh_simple/mesh_simple.rs"

[dependencies]
winit = "0.31.0-beta.2"
varre-engine = { workspace = true }
